--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
   <section id="about" class="about">
     <div class="container col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <h1 class="display-5 fw-bold text-body-emphasis  text-center lh-1 mb-3">About Us</h1>
         <div class="col-10 col-sm-8 col-lg-6">
-          <h1 class="display-5 fw-bold text-body-emphasis  text-center lh-1 mb-3">About Us</h1>
-          <img src="./images/beautiful-luxury-outdoor.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+          <img src="./images/beautiful-luxury-outdoor.jpg" class="d-block mx-lg-auto img-fluid img" alt="Bootstrap Themes"
             width="700" height="500" loading="lazy">
           <img src="./images/pexels-pixabay-164595.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
             width="700" height="500" loading="lazy">
