--- a/index.html
+++ b/index.html
@@ -285,8 +285,9 @@
   </section>
 
   <footer class="footer gradient-background">
-    <div class="nav justify-content-center border-bottom pb-3 mb-3">
-      <p class="text-center text-body-secondary">© 2023 nap</p>
+    <div class="nav justify-content-center border-bottom pt-3  ">
+      <p class="text-center text-body-secondary">© 2024 nap</p>
+
     </div>
   </footer>
 
