--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
 
 </head>
 
-<body> 
+<body>
   <main class="gradient-background">
     <header>
       <div class="container ">
@@ -29,6 +29,9 @@
             <li class="nav-item"><a href="#booking" class="nav-link text-light">Book a room <span
                   class="badge text-bg-primary">Offers</span></a></li>
             <li class="nav-item"><a href="#about" class="nav-link text-light">About us</a></li>
+            <li class="nav-item"><a href="./login.html" class="nav-link text-light">Login<span
+                  class="badge text-bg-success">Partners</span></a></li> </a></li>
+
           </ul>
         </header>
       </div>
@@ -229,7 +232,8 @@
       <input type="text" id="name" name="name" required>
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
-
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" required>
       <label for="checkin">Check-in Date:</label>
       <input type="date" id="checkin" name="checkin" required>
 
@@ -256,10 +260,10 @@
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <h1 class="display-5 fw-bold text-body-emphasis  text-center lh-1 mb-3">About Us</h1>
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/beautiful-luxury-outdoor.jpg" class="d-block mx-lg-auto img-fluid img" alt="Bootstrap Themes"
-            width="700" height="500" loading="lazy">
+          <img src="./images/beautiful-luxury-outdoor.jpg" class="d-block mx-lg-auto img-fluid img"
+            alt="Bootstrap Themes" width="700" height="700px" loading="lazy">
           <img src="./images/pexels-pixabay-164595.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-            width="700" height="500" loading="lazy">
+            width="700" height="700" loading="lazy">
         </div>
         <div class="col-lg-6">
           <p class="lead">
@@ -284,78 +288,41 @@
     </div>
   </section>
 
+
   <footer class="footer gradient-background">
     <div class="nav justify-content-center border-bottom pt-3  ">
       <p class="text-center text-body-secondary">© 2024 nap</p>
-
     </div>
   </footer>
+
+  <div class="chatbot">
+    <div class="form">
+      <button id="chat_icon" onclick="openchat()"><img src="./images/chat_icon.png" alt="chat_icon" width="25px"
+          height="25px"></button>
+      <form action="" class="chat" id="chatform">
+        <div class="chat_header">
+          <h6>Chat Now </h6>
+          <button id="close_chat" onclick="closechat()"><img src="./images/close.png" alt="close_icon" width="25px"
+              height="25px"></button>
+        </div>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+        <label for="phone">Phone Number</label>
+        <input type="tel" id="phone" name="phone" required>
+        <label for="message">Message</label>
+        <input type="text" id="message" name="message" required>
+        <button type="submit" class="send-button">Send</button>
+      </form>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 
-  <script>
-    function validateForm() {
-      var name = document.getElementById('name').value;
-      var email = document.getElementById('email').value;
-      var checkin = document.getElementById('checkin');
-      var checkout = document.getElementById('checkout');
-
-      // Basic email validation
-      var emailRegex = /^\S+@\S+\.\S+$/;
-      if (!emailRegex.test(email)) {
-        alert('Please enter a valid email address.');
-        return;
-      }
-
-      // Check if check-out date is after check-in date
-      if (new Date(checkout.value) <= new Date(checkin.value)) {
-        alert('Check-out date must be after check-in date.');
-        return;
-      }
-
-      // Check if the dates are in the future
-      var today = new Date();
-      if (new Date(checkin.value) <= today || new Date(checkout.value) <= today) {
-        alert('Check-in and check-out dates must be in the future.');
-        return;
-      }
-
-      // Additional validations can be added as needed
-
-      // If all validations pass, submit the form
-      alert('Thank you for booking with us! We look forward to seeing you soon.');
-      document.getElementById('bookingForm').reset();
-
-      document.getElementById('bookingForm').submit();
-
-    }
-
-
-
-    // Set min and max attributes for date inputs
-    window.onload = function () {
-      var today = new Date();
-      var nextYear = new Date(today.getFullYear() + 1, today.getMonth(), today.getDate());
-
-      var dd = String(today.getDate()).padStart(2, '0');
-      var mm = String(today.getMonth() + 1).padStart(2, '0'); // January is 0!
-      var yyyy = today.getFullYear();
-
-      today = yyyy + '-' + mm + '-' + dd;
-      nextYear = nextYear.toISOString().split('T')[0];
-
-      document.getElementById('checkin').setAttribute('min', today);
-      document.getElementById('checkout').setAttribute('min', today);
-      document.getElementById('checkin').setAttribute('max', nextYear);
-      document.getElementById('checkout').setAttribute('max', nextYear);
-    };
-
-
-
-
-  </script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
